# DownloadManagerClient

./: CMakeLists.txt  Commands.cpp  Commands.hpp  DownloadCommands.cpp  DownloadCommands.hpp  FileSystemCommands.cpp  FileSystemCommands.hpp  FtpDownload.cpp  FtpDownload.hpp  HttpDownload.cpp  HttpDownload.hpp  README.md  Thread.cpp  Thread.hpp  Timer.cpp  Timer.hpp  UrlDownload.cpp  UrlDownload.hpp  UtilCommands.cpp  UtilCommands.hpp  Utils.hpp  main.cpp
